# NASTRAN-95

./: .travis.yml  Makefile.in  aclocal.m4  configure
bd/: Makefile.am  Makefile.in
debian/: control
inp/: Makefile.in
man/: Makefile.in
mds/: Makefile.am  Makefile.in
mis/: Makefile.am  Makefile.in
test/: Makefile.in
um/: Makefile.am
